[tool.poetry]
name = "hybmind"
version = "0.1.0"
description = ""
authors = ["Yang-Min KIM <yang-min.kim@microbiome.studio>"]

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.0.0"
pandas = "^2.0.3"
matplotlib = "^3.7.2"
rdkit = "^2023.3.3"
rdchiral = "^1.1.0"
openpyxl = "^3.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
